# api-chatbot-weni

./: .env.example  .gitignore  API Test.postman_collection.json  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/api/v1/: urls.py
app/api/v1/views/: __init__.py  agent.py  channel.py  contact.py  message.py  user.py
app/api/webhooks/: urls.py
app/api/webhooks/views/: __init__.py  base.py  telegram.py  whatsapp.py
app/channels/: __init__.py  base.py  factory.py  mock.py  telegram.py  whatsapp.py
app/config/: asgi.py  settings.py  urls.py  wsgi.py
app/core/exceptions/: message.py
app/core/filters/: __init__.py  message.py
app/core/interfaces/: __init__.py  channel.py  message_service.py
app/core/management/commands/: populate_default_channels.py  setup_telegram_webhook.py
app/core/migrations/: 0001_initial.py  0002_remove_channel_is_active.py
app/core/models/: __init__.py  agent.py  base.py  channel.py  contact.py  message.py  user.py
app/core/permissions/: __init__.py  agent.py  user.py
app/core/serializers/: __init__.py  agent.py  base.py  channel.py  contact.py  message.py  user.py
app/core/services/: __init__.py  message_service.py
app/core/tasks/: __init__.py  message.py
app/tests/: test_agent.py  test_channel.py  test_channel_handler.py  test_contact.py  test_message.py  test_receive_message.py  test_send_message.py  test_telegram_channel.py  test_whatsapp_channel.py
